[project]
name = "churnalyzer"
version = "0.1.0"
description = "AI-driven customer churn prediction with actionable retention insights."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
